--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,36 @@
 // app global css in SCSS form
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Oswald:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Oswald:wght@400;500;600;700&display=swap');
+
+.title {
+  font-size: 7vw;
+  line-height: 7vw;
+}
+
+.font-family-M {
+  font-family: 'Montserrat', sans-serif !important;
+}
+.font-famile-O {
+  font-family: 'Oswald', sans-serif !important;
+}
+
+.title-3vw {
+  font-family: Oswald, sans-serif;
+  color: #3c435c;
+  font-size: 3vw;
+  line-height: 3vw;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.ptb-100 {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.container {
+  max-width: 1600px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
